feature: index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,22 +1,88 @@
-<html>
-    <head>
-        <title>
-            Título :-)
-        </title>
-    </head>
-    <body>
-        <h1 align="center">
-            Corpo da página
-        </h1>
-        <ol>
-            <li>Água</li>
-            <li>Suco</li>
-            <li>Refrigerante</li>
-        </ol>
-        <ul>
-            <li>Água</li>
-            <li>Suco</li>
-            <li>Refrigerante</li>
-        </ul>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Débora Duarte CV </title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-picture" src="img/profile-picture.jpg" alt="Profile Picture">
+                    <p class="name">
+                        <br>
+                        Débora Duarte
+                    </p>
+                    <br>
+                    <p class="profession">
+                        Software Engineer
+                    </p>
+                    <br>
+                </div>
+                <div class="contact-info">
+                    <br>
+                    <p class="title-left">
+                        CONTATOS
+                    </p>
+                    <ul>
+                        <li>
+                            <i class="fa fa-phone"></i>
+                            +55 99898-9898
+                        </li>
+                        <li>
+                            <i class="fa fa-envelope"></i>
+                            debora@gmail.com
+                        </li>
+                        <li>
+                            <i class="fa fa-globe"></i>
+                            www.debora.com
+                        </li>
+                        <li>
+                            <i class="fa fa-github"></i>
+                            debsduarte
+                        </li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <br>
+                    <p class="title-left">
+                        SKILLS
+                    </p>
+                    <ul>
+                        <li>
+                            <p>
+                                Html5 & CSS3
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Git & GitHub
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <section class="right-section-contents">
+                <div class="about">
+                    <p class="title-right">
+                        SOBRE
+                    </p>
+                    <br>
+                    <p class="text-contents">
+                        Olá, sou a Débora.
+                        <br><br>
+                        Um pouco mais sobre o que faço.
+                        <br>
+                        Quais são as minhas competências.
+                    </p>
+                </div>
+            </section>
+        </section>
+    </main>
+</body>
 </html>
