feature: index.html and style.css

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             </section>
         </section>
         <section class="right-section">
-            <section class="right-section-contents">
-                <div class="about">
-                    <p class="title-right">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="title-right">
                         SOBRE
-                    </p>
+                    </div>
                     <br>
                     <p class="text-contents">
                         Olá, sou a Débora.
@@ -80,6 +80,34 @@
                         <br>
                         Quais são as minhas competências.
                     </p>
+                </section>
+                <br>
+                    <div class="title-right">EXPERIÊNCIA</div>
+                    <br>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="title-right-sec">EMPRESA 01</p>
+                            <p class="text-contents">2020 - Presente</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="title-right-sec">ENGENHEIRA DE SOFTWARE</p>
+                            <p class="text-contents">
+                                Descrição das principais atividades.
+                            </p>
+                            <br>
+                        </div>
+                        <div class="exp-left">
+                            <p class="title-right-sec">EMPRESA 02</p>
+                            <p class="text-contents">2016 - 2020</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="title-right-sec">ENGENHEIRA DE SOFTWARE</p>
+                            <p class="text-contents">
+                                Descrição das principais atividades.
+                            </p>
+                        </div>
+                    </div>
+                    <br>
                 </div>
             </section>
         </section>
