feat-add-school-academy

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         SOBRE
                     </div>
                     <br>
-                    <p class="text-contents">
+                    <p class="about-contents">
                         Olá, sou a Débora.
                         <br><br>
                         Um pouco mais sobre o que faço.
@@ -92,7 +92,7 @@
                         <div class="exp-right">
                             <p class="title-right-sec">ENGENHEIRA DE SOFTWARE</p>
                             <p class="text-contents">
-                                Descrição das principais atividades.
+                                Descrição das principais atividades
                             </p>
                             <br>
                         </div>
@@ -103,8 +103,23 @@
                         <div class="exp-right">
                             <p class="title-right-sec">ENGENHEIRA DE SOFTWARE</p>
                             <p class="text-contents">
-                                Descrição das principais atividades.
+                                Descrição das principais atividades
                             </p>
+                        </div>
+                    </div>
+                    <div class="title-right">FORMAÇÃO ACADÊMICA</div>
+                    <br>
+                    <div class="education-contents">
+                        <div class="edu-left">
+                            <p class="title-right-sec">UNA</p>
+                            <p class="text-contents">2014 - 2016</p>
+                        </div>
+                        <div class="edu-right">
+                            <p class="title-right-sec">DESIGN GRÁFICO</p>
+                            <p class="text-contents">
+                                Curso Superior de Tecnologia
+                            </p>
+                            <br>
                         </div>
                     </div>
                     <br>
