--- a/index.html
+++ b/index.html
@@ -119,10 +119,34 @@
                             <p class="text-contents">
                                 Curso Superior de Tecnologia
                             </p>
+                        </div>
+                    </div>
+                    <div class="title-right">CURSOS</div>
+                    <br>
+                    <div class="awards-contents">
+                        <div class="awa-left">
+                            <p class="title-right-sec">CCAA</p>
+                            <p class="text-contents">2009 - 2015</p>
+                        </div>
+                        <div class="awa-right">
+                            <p class="title-right-sec">CURSO DE INGLÊS</p>
+                            <p class="text-contents">
+                                Curso de inglês do básico ao avançado.
+                            </p>
+                            <br>
+                        </div>
+                        <div class="awa-left">
+                            <p class="title-right-sec">UTRAMIG</p>
+                            <p class="text-contents">05/2021 - 08/2021</p>
+                        </div>
+                        <div class="awa-right">
+                            <p class="title-right-sec">CURSO DE PROGRAMAÇÃO</p>
+                            <p class="text-contents">
+                                Curso de programação com conteúdos de introdução, <br> lógica de programação, etc.
+                            </p>
                             <br>
                         </div>
                     </div>
-                    <br>
                 </div>
             </section>
         </section>
