--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Débora Duarte CV </title>
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari&display=swap" rel="stylesheet">
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- meu css -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,25 +19,22 @@
             <section class="left-section-contents">
                 <div class="profile">
                     <img class="profile-picture" src="img/profile-picture.jpg" alt="Profile Picture">
+                    <br><br>                
                     <p class="name">
-                        <br>
                         Débora Duarte
                     </p>
-                    <br>
                     <p class="profession">
-                        Software Engineer
+                        Estudante
                     </p>
-                    <br>
                 </div>
                 <div class="contact-info">
-                    <br>
                     <p class="title-left">
-                        CONTATOS
+                        CONTATO
                     </p>
                     <ul>
                         <li>
                             <i class="fa fa-phone"></i>
-                            +55 99898-9898
+                            +55 31 99898-9898
                         </li>
                         <li>
                             <i class="fa fa-envelope"></i>
@@ -47,7 +51,6 @@
                     </ul>
                 </div>
                 <div class="skills">
-                    <br>
                     <p class="title-left">
                         SKILLS
                     </p>
@@ -62,6 +65,11 @@
                                 Git & GitHub
                             </p>
                         </li>
+                        <li>
+                            <p>
+                                JavaScript
+                            </p>
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -72,25 +80,21 @@
                     <div class="title-right">
                         SOBRE
                     </div>
-                    <br>
                     <p class="about-contents">
                         Olá, sou a Débora.
                         <br><br>
-                        Um pouco mais sobre o que faço.
-                        <br>
-                        Quais são as minhas competências.
+                        Sempre fui atraída pelas diversas áreas da tecnologia, e mais recentemente pela programação front-end,
+                        buscando expandir cada dia mais meus conhecimentos.
                     </p>
                 </section>
-                <br>
                     <div class="title-right">EXPERIÊNCIA</div>
-                    <br>
                     <div class="experience-contents">
                         <div class="exp-left">
                             <p class="title-right-sec">EMPRESA 01</p>
-                            <p class="text-contents">2020 - Presente</p>
+                            <p class="time-period">2020 - Presente</p>
                         </div>
                         <div class="exp-right">
-                            <p class="title-right-sec">ENGENHEIRA DE SOFTWARE</p>
+                            <p class="title-right-sec">Desenvolvedora front-end</p>
                             <p class="text-contents">
                                 Descrição das principais atividades
                             </p>
@@ -98,21 +102,20 @@
                         </div>
                         <div class="exp-left">
                             <p class="title-right-sec">EMPRESA 02</p>
-                            <p class="text-contents">2016 - 2020</p>
+                            <p class="time-period">2016 - 2020</p>
                         </div>
                         <div class="exp-right">
-                            <p class="title-right-sec">ENGENHEIRA DE SOFTWARE</p>
+                            <p class="title-right-sec">Desenvolvedora front-end</p>
                             <p class="text-contents">
                                 Descrição das principais atividades
                             </p>
                         </div>
                     </div>
                     <div class="title-right">FORMAÇÃO ACADÊMICA</div>
-                    <br>
                     <div class="education-contents">
                         <div class="edu-left">
-                            <p class="title-right-sec">UNA</p>
-                            <p class="text-contents">2014 - 2016</p>
+                            <p class="title-right-sec">CENTRO UNIVERSITÁRIO UNA</p>
+                            <p class="time-period">08/2014 - 07/2016</p>
                         </div>
                         <div class="edu-right">
                             <p class="title-right-sec">DESIGN GRÁFICO</p>
@@ -122,11 +125,10 @@
                         </div>
                     </div>
                     <div class="title-right">CURSOS</div>
-                    <br>
                     <div class="awards-contents">
                         <div class="awa-left">
                             <p class="title-right-sec">CCAA</p>
-                            <p class="text-contents">2009 - 2015</p>
+                            <p class="time-period">02/2009 - 07/2015</p>
                         </div>
                         <div class="awa-right">
                             <p class="title-right-sec">CURSO DE INGLÊS</p>
@@ -137,7 +139,7 @@
                         </div>
                         <div class="awa-left">
                             <p class="title-right-sec">UTRAMIG</p>
-                            <p class="text-contents">05/2021 - 08/2021</p>
+                            <p class="time-period">05/2021 - 08/2021</p>
                         </div>
                         <div class="awa-right">
                             <p class="title-right-sec">CURSO DE PROGRAMAÇÃO</p>
