--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
                         </li>
                         <li>
                             <i class="fa fa-envelope"></i>
-                            debora@gmail.com
-                        </li>
-                        <li>
-                            <i class="fa fa-globe"></i>
-                            www.debora.com
+                            dedouarte@gmail.com
                         </li>
                         <li>
                             <i class="fa fa-github"></i>
@@ -90,24 +86,25 @@
                     <div class="title-right">EXPERIÊNCIA</div>
                     <div class="experience-contents">
                         <div class="exp-left">
-                            <p class="title-right-sec">EMPRESA 01</p>
-                            <p class="time-period">2020 - Presente</p>
+                            <p class="title-right-sec">Guia comercial Atrativa</p>
+                            <p class="time-period">2017 - 2018</p>
                         </div>
                         <div class="exp-right">
-                            <p class="title-right-sec">Desenvolvedora front-end</p>
+                            <p class="title-right-sec">Diagramadora</p>
                             <p class="text-contents">
-                                Descrição das principais atividades
+                                Diagramação e edição de jornais, design de propagandas de clientes de diversas áreas.
                             </p>
                             <br>
                         </div>
                         <div class="exp-left">
-                            <p class="title-right-sec">EMPRESA 02</p>
-                            <p class="time-period">2016 - 2020</p>
+                            <p class="title-right-sec">CCAA</p>
+                            <p class="time-period">2014</p>
                         </div>
                         <div class="exp-right">
-                            <p class="title-right-sec">Desenvolvedora front-end</p>
+                            <p class="title-right-sec">Professora de inglês</p>
                             <p class="text-contents">
-                                Descrição das principais atividades
+                                Lecionamento de turmas infantis e adultas, aplicação e correção de atividades, manuseio e aplicação de material
+                                didático de acordo com métodos específicos.
                             </p>
                         </div>
                     </div>
